# nullref

./: .gitignore  Cargo.toml  README.md  connection.js  index.html  index.js  message.js  package.json
client/: index.html  index.js
doc/: CONTRIBUTING.md  REQUIREMENTS.md  SPECIFICATION.md
server/: main.py  pylintrc  pyproject.toml
src/: _main.rs  client.rs  lib.rs  main.rs  message.rs  mockclient.rs  server.rs
