[package]
name = "nullref"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite="*"
tokio-tungstenite = "*"
futures-channel = "0.3"
rand = "0.8.5"
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.9"
