[tool.poetry]
name = "server"
version = "0.1.0"
description = "nullref server component"
authors = ["CSXL"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
